fix(style): gap incompatable

--- a/src/checkbox/style/index.less
+++ b/src/checkbox/style/index.less
@@ -174,24 +174,19 @@
 
 .@{group-prefix-cls} {
   display: inline-flex;
-  gap: 16px;
   justify-content: flex-start;
   &__vertical {
     flex-direction: column;
     align-items: flex-start;
+    .@{checkbox-wrapper-cls} + .@{checkbox-wrapper-cls} {
+      margin-top: 16px;
+    }
   }
   &__horizontal {
     flex-direction: row;
     align-items: center;
-  }
-  @supports not (gap: 16px) {
     .@{checkbox-wrapper-cls} + .@{checkbox-wrapper-cls} {
       margin-left: 16px;
-    }
-    &__vertical {
-      .@{checkbox-wrapper-cls} + .@{checkbox-wrapper-cls} {
-        margin-top: 16px;
-      }
     }
   }
 }
